--- a/RocketNews/style.css
+++ b/RocketNews/style.css
@@ -57,12 +57,11 @@ main {
   gap: 10px;
 }
 #area_conteudo #area_email #email {
-  border: px solid red;
   display: flex;
   align-items: flex-end;
   justify-content: flex-end;
   height: 3em;
-  width: 50em;
+  width: 55em;
   position: relative;
   box-shadow: 3px 5px 8px 5px rgba(18, 18, 18, 0.808);
 }
@@ -70,8 +69,10 @@ main {
   width: 95%;
   height: 100%;
   background-color: #E1E1E6;
-  border: none;
+  border-left: 5px solid #04D361;
   outline: none;
+  font-size: 20px;
+  padding-left: 10px;
 }
 #area_conteudo #area_email #email #caixa_email:focus {
   outline: 1px solid #E1E1E6;
@@ -109,4 +110,12 @@ main {
 #area_img img {
   width: 100%;
   height: 100%;
+}
+
+.invalido {
+  outline: 3px solid rgb(150, 19, 19);
+}
+
+.valido {
+  outline: 3px solid #04D361;
 }/*# sourceMappingURL=style.css.map */
