--- a/RocketNews/style.css
+++ b/RocketNews/style.css
@@ -50,6 +50,9 @@ main {
   color: #E1E1E6;
   font-weight: 500;
 }
+#area_conteudo #area_text #text :nth-child(3) {
+  color: #A8A8A8;
+}
 #area_conteudo #area_email {
   color: #A8A8A8;
   display: flex;
@@ -65,13 +68,16 @@ main {
   position: relative;
   box-shadow: 3px 5px 8px 5px rgba(18, 18, 18, 0.808);
 }
+#area_conteudo #area_email #email input {
+  border: none;
+}
 #area_conteudo #area_email #email #caixa_email {
-  width: 95%;
+  width: 100%;
   height: 100%;
   background-color: #E1E1E6;
   border-left: 5px solid #04D361;
   outline: none;
-  font-size: 20px;
+  font-size: 18px;
   padding-left: 10px;
 }
 #area_conteudo #area_email #email #caixa_email:focus {
@@ -88,18 +94,22 @@ main {
 }
 #area_conteudo #area_email #email img {
   background-color: #8257e5;
+  padding: 4px;
   width: 2.5em;
   height: 100%;
   text-align: center;
+  transition: 0.5s;
+}
+#area_conteudo #area_email #email #img_send:hover {
+  box-shadow: 2px 0px 5px 2px #A8A8A8;
+  padding: 6px;
 }
 #area_conteudo #ler_primeiro {
-  color: #8257e5;
   font-weight: 500;
-  display: flex;
-  align-items: center;
 }
-#area_conteudo #ler_primeiro img {
-  fill: #8257e5;
+#area_conteudo #ler_primeiro a {
+  text-decoration: none;
+  color: #8257e5;
 }
 
 #area_img {
@@ -113,9 +123,11 @@ main {
 }
 
 .invalido {
-  outline: 3px solid rgb(150, 19, 19);
+  outline: 3px ridge rgba(240, 51, 13, 0.862745098);
+  transition: 0.4s;
 }
 
 .valido {
   outline: 3px solid #04D361;
+  transition: 0.4s;
 }/*# sourceMappingURL=style.css.map */
