--- a/social tree/style.css
+++ b/social tree/style.css
@@ -4,6 +4,8 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  outline: none;
+  border: none;
 }
 
 li {
@@ -45,8 +47,10 @@ main {
 #perfil #area_photo #photo {
   width: 50%;
   border: 1px solid #BB99DD;
-  padding: 5px;
+  padding: 3px;
   border-radius: 50%;
+  display: flex;
+  align-items: center;
   box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.29);
 }
 #perfil #area_photo #photo img {
@@ -73,7 +77,6 @@ main {
   background-color: #b19ac6;
   box-shadow: 0px 5px 5px 2px rgba(0, 0, 0, 0.29);
   color: white;
-  text-decoration: underline;
 }
 #perfil #contato {
   width: 100%;
