--- a/social tree/style.scss
+++ b/social tree/style.scss
@@ -2,6 +2,8 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    outline: none; 
+    border: none
  }
 
  // Fonte Poppins; 300
@@ -60,14 +62,17 @@ a{
         flex-direction: column;
         align-items: center;
         gap: 8px;
-
+        
         font-family: $tamanhoFontName;
         font-weight: $tamanhoFontName;
         #photo{
             width: 50%;
             border: 1px solid $corGeral;
-            padding: 5px;
+            padding: 3px;
             border-radius: 50%;
+
+            display: flex;
+            align-items: center;
 
             box-shadow: 0px 1px 2px  rgba(0, 0, 0, 0.29);
             img{
@@ -101,8 +106,6 @@ a{
             background-color: $hoverLink; 
             box-shadow: 0px 5px 5px 2px rgba(0, 0, 0, 0.29);
             color: white;
-
-            text-decoration: underline;
         }
     }
 
