--- a/Pricing Table/style.css
+++ b/Pricing Table/style.css
@@ -10,7 +10,6 @@
 body {
   height: 100vh;
   width: 100vw;
-  z-index: 0;
   display: flex;
   justify-content: center;
   font-size: 24px;
@@ -24,7 +23,6 @@ body {
   background-color: #1d539e;
   display: flex;
   justify-content: center;
-  z-index: 0;
 }
 #header .box-title {
   border: px solid red;
@@ -35,7 +33,6 @@ body {
   gap: 15px;
   text-align: center;
   position: absolute;
-  z-index: 1;
 }
 #header .box-title h1 {
   color: #f9fbfc;
@@ -66,18 +63,15 @@ body {
 }
 
 #main {
-  border: px solid red;
   width: 80%;
   height: 65%;
   position: absolute;
   top: 235px;
-  z-index: 1000;
   display: flex;
   justify-content: space-evenly;
   align-items: center;
 }
 #main .cards {
-  border: px solid blue;
   height: 100%;
   width: 30%;
   border-radius: 10px;
@@ -92,11 +86,9 @@ body {
   padding: 20px;
 }
 #main .cards-popular {
-  border: px solid red;
   align-self: baseline;
 }
 #main .cards-popular .destaque {
-  border: px solid red;
   width: 100%;
   height: 17%;
   border-radius: 10px 10px 0 0;
@@ -107,7 +99,6 @@ body {
   gap: 80px;
 }
 #main .cards-popular .destaque p {
-  border: px solid red;
   background-color: #1d539e;
   color: #f9fbfc;
   padding: 5px 15px;
@@ -121,14 +112,14 @@ body {
   color: #1d539e;
   font-weight: 600;
 }
-#main .cards-popular .bt-assinar {
+#main .cards-popular .bt-assinar-destaque {
   border: px solid red;
   margin: auto;
   width: 100%;
   height: 18%;
   text-align: center;
 }
-#main .cards-popular .bt-assinar input {
+#main .cards-popular .bt-assinar-destaque input {
   width: 100%;
   height: 100%;
   border-radius: 10px;
@@ -138,7 +129,6 @@ body {
 }
 
 .description {
-  border: px solid red;
   height: 73%;
   padding: 20px;
   display: flex;
@@ -171,7 +161,6 @@ body {
 }
 
 .bt-assinar-normal {
-  border: px solid red;
   margin: auto;
   width: 100%;
   height: 18%;
@@ -190,4 +179,92 @@ body {
 
 .frist-bt {
   margin-top: 70px;
+}
+
+@media (max-width: 1140px) and (min-width: 1009px) {
+  #main {
+    height: 60%;
+    width: 100%;
+  }
+  .box-title {
+    width: 90% !important;
+  }
+  .cards {
+    width: 30% !important;
+  }
+  .cards h3 {
+    font-size: 1.3rem;
+  }
+  .cards span {
+    font-size: 1.4rem;
+  }
+  .cards p {
+    font-size: 0.7rem;
+  }
+  .bt-assinar-normal {
+    width: 85%;
+    height: 50% !important;
+  }
+  .bt-assinar-destaque {
+    height: 16% !important;
+  }
+  .destaque p {
+    padding: 2px;
+    font-size: 0.3rem;
+  }
+}
+@media (max-width: 1008px) and (min-width: 768px) {
+  #main {
+    height: 1800px !important;
+    display: flex;
+    flex-direction: column;
+  }
+  .box-title {
+    width: 100% !important;
+  }
+  .box-title h1 {
+    font-size: 2.5rem;
+  }
+  .box-title p {
+    font-size: 0.9rem !important;
+    width: 55% !important;
+  }
+  .cards {
+    width: 60% !important;
+    height: 25% !important;
+  }
+  .cards-popular {
+    align-self: none;
+    height: 95%;
+    margin: 100px auto;
+  }
+}
+@media (max-width: 768px) and (min-width: 425px) {
+  #main {
+    height: 1800px !important;
+    display: flex;
+    flex-direction: column;
+  }
+  .box-title {
+    width: 100% !important;
+  }
+  .box-title h1 {
+    font-size: 2.5rem;
+  }
+  .box-title p {
+    font-size: 0.9rem !important;
+    width: 55% !important;
+  }
+  .cards {
+    width: 75% !important;
+    height: 25% !important;
+  }
+  .cards-popular {
+    align-self: none;
+    height: 95%;
+    margin: 100px auto;
+  }
+  .bt-assinar-normal {
+    height: 14%;
+  }
 }/*# sourceMappingURL=style.css.map */
