--- a/Pricing Table/style.scss
+++ b/Pricing Table/style.scss
@@ -21,8 +21,7 @@ $font-700: 700;
 body{
     height: 100vh;
     width: 100vw;
-    z-index: 0;
-
+   
     display: flex;
     justify-content: center;
 
@@ -40,7 +39,6 @@ body{
 
     display: flex;
     justify-content: center;
-    z-index: 0;
     
     .box-title{
         border: px solid red;
@@ -51,8 +49,6 @@ body{
         gap: 15px;
         text-align: center;
         position: absolute;
-
-        z-index: 1;
 
         h1{
             color: $bg-cards;
@@ -85,26 +81,21 @@ body{
 }
 
 #main{
-    border: px solid red;
     width: 80%;
     height: 65%;
     position: absolute;
     top: 235px;
 
-    z-index: 1000;
-
     display: flex;
     justify-content: space-evenly;
     align-items: center;
     .cards{
-        border: px solid blue;
         height: 100%;
         width: 30%;
         border-radius: 10px;
         font-size: 1.2rem;
-
+       
         background-color: $bg-cards;
-        
     }
 
     .cards-normal{
@@ -114,15 +105,12 @@ body{
         .title-card-normal{
             padding: 20px;
         }
-
     }
     
     .cards-popular{
-        border: px solid red;
         align-self: baseline;
-
+       
         .destaque{
-            border: px solid red;
             width: 100%;
             height: 17%;
             border-radius: 10px 10px 0 0;
@@ -135,7 +123,6 @@ body{
             gap: 80px;
 
             p{
-                border: px solid red;
                 background-color: $bg-header;
                 color: $bg-cards;
                 padding: 5px 15px;
@@ -144,19 +131,14 @@ body{
                 text-align: center;
 
                 font-size: 0.8rem;
-                font-weight: 400;
-              
-               
+                font-weight: 400;                             
             }
             h2{
                 color: $bg-header;
-                font-weight: 600;
-                
-                
-            }
-            
+                font-weight: 600;                                
+            }            
         }
-        .bt-assinar{
+        .bt-assinar-destaque{
             border: px solid red;
             margin: auto;
             width: 100%;
@@ -175,10 +157,10 @@ body{
             }
         }
     }
+
 }
 
 .description{
-    border: px solid red;
     height: 73%;
     padding: 20px ;
 
@@ -201,8 +183,6 @@ body{
 
 .list-check{
     font-size: 1rem;
-   
-
     ul{
         display: flex;
         flex-direction: column;
@@ -217,10 +197,7 @@ body{
         }
     }
 }
-
-
 .bt-assinar-normal{
-    border: px solid red;
     margin: auto;
     width: 100%;
     height: 18%;
@@ -238,10 +215,116 @@ body{
         background-color: $bg-cards;
         border: 1px solid $bg-header;
     }
-
- 
 }
-
 .frist-bt{
     margin-top: 70px;
 }
+
+
+//Media queries*********************
+
+@media(max-width: 1140px) and (min-width:1009px) {
+    #main{
+        height: 60%;
+        width: 100%;
+    }
+
+    .box-title{
+        width: 90% !important;
+    }
+
+    .cards{
+        width: 30%!important;
+       
+        h3{
+            font-size: 1.3rem;
+        }
+        span{
+            font-size: 1.4rem;
+        }
+        p{
+            font-size: 0.7rem;
+        }
+
+    }
+
+    .bt-assinar-normal{
+        width: 85%;
+        height: 50%!important;
+    }
+
+    .bt-assinar-destaque{
+        height: 16%!important;
+    }
+    .destaque{
+        p{
+            padding: 2px;
+            font-size: 0.3rem;
+        }
+    }
+}   
+
+@media(max-width: 1008px) and(min-width: 768px){
+  #main{
+    height: 1800px!important;
+
+    display: flex;
+    flex-direction: column;
+  }
+
+  .box-title{
+   
+    width: 100%!important;
+    h1{
+        font-size: 2.5rem;
+    }
+    p{
+        font-size: 0.9rem!important;
+        width: 55%!important;
+    }
+  }
+
+  .cards{
+    width: 60%!important;
+    height: 25%!important;
+  }
+
+  .cards-popular{
+    align-self: none;
+    height: 95%;
+    margin: 100px auto ;
+  }
+}
+
+@media(max-width:768px) and(min-width: 425px){
+    #main{
+        height: 1800px!important;
+    
+        display: flex;
+        flex-direction: column;
+        
+      }
+      .box-title{
+        width: 100%!important;
+        h1{           
+            font-size: 2.5rem;
+        }
+        p{          
+            font-size: 0.9rem!important;
+            width: 55%!important;
+        }
+      }    
+      .cards{       
+        width: 75%!important;
+        height: 25%!important;
+      }    
+      .cards-popular{
+        align-self: none;
+        height: 95%;
+        margin: 100px auto ;
+      }
+      .bt-assinar-normal{
+        height: 14%;
+      }
+    }
+    
