--- a/Login Form/style.scss
+++ b/Login Form/style.scss
@@ -46,7 +46,6 @@ main{
 .area-login{
     width: 50%;
     height: 100%;
-    border: px solid red;
     color: $text-base;
     font-family: $font-family;
    
@@ -60,18 +59,15 @@ main{
     }
 
     .box-form{
-        border: px solid black;
         width: 100%;
         height: 100%;
         display: flex;
         justify-content: center;
         align-items: center;
-
       
         .form{
             width: 65%;
             height: 75%;
-            border: px solid blue;
             padding: 50px 80px;
 
             background-color: $form-background;
@@ -81,10 +77,7 @@ main{
             justify-content: center;
             gap: 20px;
 
-
             .text-login{
-                border: px solid red;
-
                 h2{
                     color: $text-title;
                 
@@ -101,7 +94,6 @@ main{
             }
 
             .inputs-form{
-                border: px solid blue;
                
                 .formulario{
                     display: flex;
@@ -117,7 +109,6 @@ main{
                         gap: 5px;
 
                         .icon-input{
-                            border: px solid red;
                             position: relative;
                           
                             display: flex;
@@ -136,8 +127,7 @@ main{
                             }
                         }
 
-                        .entrada{
-                            border: px solid red;
+                        .entrada{                           
                             width: 100%;
                             height: 40px;
                             padding-left: 40px;
@@ -163,15 +153,12 @@ main{
                     flex-wrap: nowrap;
                     justify-content: space-between;
                     align-items: center;
-                    border: px solid blue;
-                 
-                    
+                                                         
                     .lembre-me{
                         display: flex;
                         align-items: center;
-                        gap: 5px;
-                        border: px solid red;
-                       padding-left: 5px;
+                        gap: 5px;                       
+                        padding-left: 5px;
 
                         font-size: 0.8rem;
                         height: 50px;
@@ -181,6 +168,7 @@ main{
 
                             height: 40%;
                             width: 20px;
+                            border-radius: 5px;
                             border: 1px solid $text-base;
                             background-color: $form-background;                                                      
                          }
@@ -188,12 +176,14 @@ main{
                          .check-box:checked{
                             background-color: $primary-color;
                          }
-                    }
+                    }                    
+                        .esqueci a{
+                            font-size: 0.8rem;
+                        }                                            
                 }
             }
 
-            .registre{
-                border: px solid red;
+            .registre{               
                 text-align: center;
 
                 width: 100%;
@@ -203,8 +193,7 @@ main{
                 flex-direction: column;
                 gap: 15px;
 
-                .bt-login{
-                    border: px solid blue;
+                .bt-login{                   
                     width: 100%;
                     height: 60px;
                     border-radius: 5px;
@@ -214,8 +203,7 @@ main{
             }
         }
 
-        .cadastrar{
-            border: px solid red;
+        .cadastrar{            
             text-align: center;            
             p{
 
@@ -230,20 +218,6 @@ main{
     
 }
 
-.check-box{
-    border: 4px solid red;
-}
-
-.esqueci a{
-    font-size: 0.8rem;
-}
-
-
-.none{
-    display: none;
-}
-
-
 //Area imagem *****************************
 
 .area-img{
@@ -255,4 +229,10 @@ main{
         width: 100%;
         height: 100%;
     }
+}
+
+//Formatações unidas com o JS 
+
+.none{
+    display: none;
 }
