--- a/ThemeSwitcher/style.css
+++ b/ThemeSwitcher/style.css
@@ -30,7 +30,7 @@ main {
   padding: 10px;
   width: 15%;
   height: 12%;
-  border-radius: 25px;
+  border-radius: 20px;
   background-color: #292C35;
   display: flex;
   align-items: center;
@@ -47,6 +47,7 @@ main {
   height: 100%;
 }
 .area-theme .sun-img {
+  border: 1px solid;
   width: 20%;
   height: 90%;
 }
