--- a/RocketShoes/style.css
+++ b/RocketShoes/style.css
@@ -15,7 +15,6 @@ body {
 }
 
 header {
-  border: px solid red;
   position: absolute;
   width: 100%;
   height: 10%;
@@ -25,7 +24,6 @@ header {
   align-items: center;
 }
 header .icon-logo {
-  border: px solid red;
   width: 60px;
   height: 60px;
   cursor: pointer;
@@ -35,7 +33,6 @@ header .icon-logo img {
   height: 100%;
 }
 header .icon-bag {
-  border: px solid red;
   width: 30px;
   height: 30px;
   cursor: pointer;
@@ -45,7 +42,6 @@ header .icon-bag img {
   height: 100%;
 }
 header .link-header {
-  border: px solid blue;
   display: flex;
   justify-content: space-between;
   width: 50%;
@@ -58,7 +54,6 @@ header .link-header a {
   font-weight: 700;
 }
 header .box-search {
-  border: px solid red;
   height: 1.9rem;
   display: flex;
   align-items: center;
@@ -90,7 +85,6 @@ main .area-text {
   justify-content: center;
 }
 main .area-text .description-product {
-  border: px solid red;
   width: 50%;
   height: 70%;
   display: flex;
@@ -99,7 +93,6 @@ main .area-text .description-product {
   font-family: "Roboto";
 }
 main .area-text .description-product .text-product h1 {
-  border: px solid blue;
   font-size: 2.5rem;
   margin-bottom: 20px;
 }
@@ -112,7 +105,6 @@ main .area-text .description-product h2 {
   font-weight: 700;
 }
 main .area-text .description-product .button-product {
-  border: 1px solid red;
   background-color: #FF0000;
   color: #E5E5E5;
   height: 20%;
@@ -130,31 +122,32 @@ main .area-image {
   justify-content: center;
 }
 main .area-image .imagens {
-  border: px solid red;
   width: 95%;
   height: 70%;
 }
 main .area-image .imagens .img-foco {
-  padding-top: 30px;
-  border: px solid blue;
-  width: 100%;
+  background-color: #fff;
+  width: 50%;
   height: 80%;
   text-align: center;
+  margin: auto;
+  overflow: hidden;
 }
 main .area-image .imagens .img-foco img {
-  border: px solid red;
-  width: 50%;
+  width: 100%;
   height: 100%;
+  transform-origin: center center;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 main .area-image .imagens .box-images {
-  border: px solid yellow;
   display: flex;
   width: 100%;
   height: 25%;
-  padding-block: 5px;
+  padding-top: 5px;
+  margin-top: 15px;
 }
 main .area-image .imagens .box-images .second-image {
-  border: px solid blue;
   width: 20%;
   height: 100%;
   margin: auto;
@@ -185,11 +178,9 @@ footer .video-footer img {
   height: 100%;
 }
 footer .social {
-  border: px solid blue;
   width: 60%;
 }
 footer .social ul {
-  border: px solid red;
   display: flex;
   justify-content: space-between;
 }
@@ -199,7 +190,6 @@ footer .social a {
   font-weight: 700;
 }
 footer .bt-explore {
-  border: px solid blue;
   height: 100%;
   width: 20%;
   display: flex;
