--- a/RocketCoffee/mobile.scss
+++ b/RocketCoffee/mobile.scss
@@ -54,6 +54,7 @@ $font-700:700;
                 text-align: center;
                 z-index: 1000;
 
+                cursor: pointer;
                 img{
                     width: 80%;
                     height: 80%;
@@ -95,6 +96,7 @@ $font-700:700;
         display: flex;
         align-items: center;
         
+        
         input{
             width: 100%;
             height: 100%;
@@ -103,6 +105,15 @@ $font-700:700;
             color: $text-color;
             font-weight: $font-700;
             background-color: rgba(0, 0, 0, 0.4);
+            cursor: pointer;
+        }
+    }
+    .button-mobile:hover{
+        box-shadow:  0px 0px 15px $button;
+        transition: 0.4s;
+        input{
+            font-weight: $font-700;
+            color:$text-color;
         }
     }
     .painel-mobile{
